eck-kubernetes/07-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elastic-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - owsec-es-apm.owukcloud.net
    secretName: owscloud-cert
  rules:
  - host: owsec-es-apm.owscloud.net
    http:
      paths:
      - backend:
          serviceName: quickstart-kb-http
          servicePort: 5601
        path: /(.*)
